objects/IntelSetting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>test intel setting</description>
    <fields>
        <fullName>Creation__c</fullName>
        <label>Creation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inbound__c</fullName>
        <label>Inbound</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interaction__c</fullName>
        <label>Interaction</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outbound__c</fullName>
        <label>Outbound</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <label>Process</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Restriction__c</fullName>
        <label>Restriction</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Update__c</fullName>
        <label>Update</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>IntelSetting</label>
</CustomObject>